# Makima

./: .gitignore  CMakeLists.txt  Makima.cpp  Makima.h  README.md  main.c
Empty/: EmptyApplication.cpp
Framework/Common/: BaseApplication.cpp  BaseApplication.hpp  GraphicsManager.hpp  main.cpp
Framework/Interface/: IApplication.hpp  IRuntimeModule.hpp
Platform/Linux/: helloengine_opengl.cpp  helloengine_xcb.c
Platform/Windows/: README.md  cbuffer.hs  copy.vs  helloengine_d2d.cpp  helloengine_d3d.cpp  helloengine_d3d12.cpp  helloengine_opengl.cpp  helloengine_win.c  vsoutput.hs
